Fixed the Readable Line Length Style Settings slider.

--- a/src/scss/Editor/previewView.scss
+++ b/src/scss/Editor/previewView.scss
@@ -141,13 +141,6 @@ ul {
 	margin-block-end: 0.5em;
 }
 
-.markdown-source-view.mod-cm6.is-readable-line-width:not(.is-rtl) .cm-contentContainer,
-.markdown-source-view.mod-cm6.is-line-wrap.is-readable-line-width .cm-content,
-.markdown-source-view.mod-cm6.is-line-wrap.is-readable-line-width .cm-line:not(.HyperMD-table-row),
-.markdown-preview-view.is-readable-line-width .markdown-preview-sizer {
-	max-width: var(--custom-readable-line-length);
-}
-
 .cm-cursorLayer .cm-cursor {
 	border-left-width: 2px;
 }
