--- a/src/scss/Info/styleSettingsConfig.scss
+++ b/src/scss/Info/styleSettingsConfig.scss
@@ -1565,7 +1565,7 @@ settings:
         level: 1
         collapsed: true
     -
-        id: custom-readable-line-length
+        id: file-line-width
         title: Custom Readable Line Length (px)
         description: Changes the maximum width of the Readable Line Length (px). Enable 'Readable line length' in the Editor tab in Settings for this to apply.
         type: variable-number-slider
