--- a/src/scss/Variables/coreVariables.scss
+++ b/src/scss/Variables/coreVariables.scss
@@ -21,8 +21,6 @@ body {
 
 	--header-height: 41px;
 
-	--custom-readable-line-length: 700px;
-
 	--callout-padding: 4px;
 
 	--file-header-font-size: var(--font-ui-medium);
